--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "heroku-postbuild": "cd client && npm install && npm run build",
     "client": "cd client && npm start",
     "server": "nodemon server/index.js",
-    "build": "",
+    "build": "cd client",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "author": "Aakash Pahuja",
