Rewamp server file

--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "tiny-me",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "client": "cd client && npm start",
     "server": "nodemon server/index.js",
-    "build": "cd client",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "author": "Aakash Pahuja",
