Add working model of the app

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "Aakash Pahuja",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "password-generator": "^2.2.0",
     "express": "^4.16.3",
     "lokijs": "^1.5.5"
   },
