--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "babel-eslint": "8.0.2",
-    "prettier-eslint": "^8.8.2"
-  }
+  "proxy": "http://localhost:5000"
 }
