--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tiny-me",
-  "version": "1.0.0",
-  "description": "",
+  "name": "tinny.tech",
+  "version": "2.0.0",
+  "description": "URL Shortener web-app",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,12 +13,12 @@
   "author": "Aakash Pahuja",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "lokijs": "^1.5.5"
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "lokijs": "^1.5.8"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^5.0.1"
   }
 }
